  (Kate Deplaix and David Allsopp, review by Sébastien Hinderer
   and Gabriel Scherer )

- #9218, #9269: avoid a rare wrong module name error with "-annot" and
  inline records.
  (Florian Angeletti, review by Gabriel Scherer, report by Kate Deplaix)

- #9261: Fix a soundness bug in Rec_check, new in 4.10 (from #8908)
  (Vincent Laviron, review by Jeremy Yallop and Gabriel Scherer)

OCaml 4.09 maintenance branch:
------------------------------

- #8855, #8858: Links for tools not created when installing with
  --disable-installing-byecode-programs (e.g. ocamldep.opt installed, but
  ocamldep link not created)
  (David Allsopp, report by Thomas Leonard)

- #8953, #8954: Fix error submessages in the toplevel: do not display
  dummy locations
  (Armaël Guéneau, review by Gabriel Scherer)

- #8965, #8979: Alpine build failure caused by check-parser-uptodate-or-warn.sh
  (Gabriel Scherer and David Allsopp, report by Anton Kochkov)

- #8985, #8986: fix generation of the primitives when the locale collation is
  incompatible with C.
  (David Allsopp, review by Nicolás Ojeda Bär, report by Sebastian Rasmussen)

- #9050, #9076: install missing compilerlibs/ocamlmiddleend archives
  (Gabriel Scherer, review by Florian Angeletti, report by Olaf Hering)

- #9180: pass -fno-common option to C compiler when available,
  so as to detect problematic multiple definitions of global variables
  in the C runtime
  (Xavier Leroy, review by Mark Shinwell)

- #9144, #9180: multiple definitions of global variables in the C runtime,
  causing problems with GCC 10.0 and possibly with other C compilers
  (Xavier Leroy, report by Jürgen Reuter, review by Mark Shinwell)

- #9128: Fix a bug in bytecode mode which could lead to a segmentation
  fault. The bug was caused by the fact that the atom table shared a
  page with some bytecode. The fix makes sure both the atom table and
  the minor heap have their own pages.
  (Jacques-Henri Jourdan, review by Stephen Dolan, Xavier Leroy and